day4/kubernetes/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: docker.io/library/mariadb:10.10
        name: mariadb
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: vol-nfs
      volumes:
      - name: vol-nfs
        persistentVolumeClaim:
          claimName: pvc-nfs
