day4/kubernetes/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  strategy: 
    type: "RollingUpdate"
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: gurve/task1_nonroot:v0.2.0
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
        ports:
          - name: http
            containerPort: 8081
            protocol: TCP
        readinessProbe:
          tcpSocket:
            port: http 
          failureThreshold: 1
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: http 
            scheme: HTTP
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 5
