day4/kubernetes/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8081
  selector:
    app: myapp
  type: ClusterIP
